# sonoglyph

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  LICENSE  README.md  eslint.config.js  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  vitest.config.ts
.agents/skills/create-pr/: SKILL.md
.agents/skills/review-pr/: SKILL.md
.agents/skills/verify/: SKILL.md
.cargo/: config.toml
.changeset/: README.md  config.json  eridian-recognizer-plugin.md  phase-2-plugin-platform.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: bench.yml  ci.yml  pr-title.yml  release.yml  rust.yml
.husky/: post-merge
apps/playground/: CHANGELOG.md  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/playground/src/: App.tsx  controller.ts  hooks.ts  main.tsx  styles.css  wasm-stub.ts
apps/playground/src/components/: BenchmarkPanel.tsx  EngineBenchmarkPanel.tsx  EridianPanel.tsx  FeaturesPanel.tsx  GlyphTimeline.tsx  InputPanel.tsx  MeaningPanel.tsx  MorsePanel.tsx  Panel.tsx  SpectrumPanel.tsx  WaveformPanel.tsx
bench-baselines/: README.md  rust.json  ts.json  wasm.json
crates/sonoglyph-dsp/: Cargo.toml
crates/sonoglyph-dsp/benches/: engine.rs
crates/sonoglyph-dsp/src/: engine.rs  goertzel.rs  lib.rs  peaks.rs  spectrum.rs  wasm.rs  window.rs
crates/sonoglyph-dsp/tests/: golden_vectors.rs  properties.rs
crates/sonoglyph-fft/: Cargo.toml
crates/sonoglyph-fft/src/: lib.rs
docs/: architecture.md  eridian.md  plugins.md  roadmap.md
plugins/dtmf/: CHANGELOG.md  package.json  tsconfig.build.json
plugins/dtmf/src/: dtmf.test.ts  dtmf.ts  frequencies.test.ts  frequencies.ts  goertzel-dtmf.test.ts  goertzel-dtmf.ts  index.ts
plugins/eridian/: CHANGELOG.md  package.json
plugins/eridian/src/: chords.test.ts  chords.ts  eridian.test.ts  eridian.ts  index.ts  translator.test.ts  translator.ts
plugins/morse/: CHANGELOG.md  package.json  tsconfig.build.json
plugins/morse/src/: code.test.ts  code.ts  index.ts  morse.test.ts  morse.ts  translator.ts
scripts/: bootstrap.sh  check-publishable.ts
scripts/bench/: bless.sh  collect-rust.ts  collect-vitest.ts  gate.ts  lib.ts  report.ts
website/: CHANGELOG.md  PRODUCT.md  global.d.ts  next.config.ts  package.json  tsconfig.json
website/.impeccable/briefs/: landing-page.md
website/app/: decode.ts  error.tsx  globals.css  instrument.tsx  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  pipeline-figure.tsx  robots.ts  site-header.tsx  site.ts  sitemap.ts  theme-toggle.tsx
website/app/eridian/: eridian-shell.tsx  hub-hero.tsx  page.tsx  zones.ts
website/app/eridian/components/: chord-diagram.tsx  register-control.tsx  share.tsx  word-card.tsx
website/app/eridian/compose/: composer.tsx  page.tsx
website/app/eridian/dictionary/: dictionary-explorer.tsx  page.tsx
website/app/eridian/learn/: guided-tour.tsx  page.tsx  tour.ts
website/app/eridian/lib/: audio.ts  notes.ts
website/app/eridian/translator/: page.tsx  translator-console.tsx  translator-engine.ts
website/app/eridian/transmitter/: page.tsx  transmitter.tsx
website/app/examples/: example-shell.tsx  page.tsx
website/app/examples/dtmf/: dtmf-demo.tsx  page.tsx
website/app/examples/morse/: morse-demo.tsx  page.tsx
website/app/examples/tone/: page.tsx  tone-demo.tsx
website/app/learn/: articles.ts  page.tsx
website/app/learn/[slug]/: page.tsx
website/app/learn/components/: controls.tsx  figure-shell.tsx  svg.ts  use-audio.ts
website/app/learn/content/: building-a-recognizer.tsx  dtmf-history.tsx  feature-extraction.tsx  fft-and-windowing.tsx  fft-vs-goertzel.tsx  harmonics.tsx  index.ts  nyquist.tsx  peak-detection.tsx  sound-and-sampling.tsx
website/app/learn/figures/: building-a-recognizer-figure.tsx  dtmf-history-figure.tsx  feature-extraction-figure.tsx  fft-and-windowing-figure.tsx  fft-vs-goertzel-figure.tsx  harmonics-figure.tsx  nyquist-figure.tsx  peak-detection-figure.tsx  sampling-figure.tsx
